plugins/kotlin/idea/tests/testData/multiModuleLineMarker/transitiveCommon/user_jvm/jvm.kt
actual class <!LINE_MARKER("descr='Has expects in user_common module'")!>Expected<!> {
    actual val <!LINE_MARKER("descr='Has expects in user_common module'")!>some<!> = Some()
}
